...
            )
        }
        Spacer(modifier = Modifier.height(16.dp))
        TextField(
            value = playerName,
            onValueChange = { playerName = it },
            label = { Text("Player Name") },
        )
        Spacer(modifier = Modifier.height(8.dp))
        Button(
            onClick = {
                addPlayer(playerName)
                playerName = ""
            },
        ) {
            Text("Add Player")
        }
        Spacer(modifier = Modifier.weight(1F))
        Button(
            onClick = navigateToNextScreen,
        ) {
            Text("Next")
...
